improvement: more readable label for no vlan selection

--- a/templates/default/net/netadd.html
+++ b/templates/default/net/netadd.html
@@ -67,7 +67,7 @@
 		</TD>
 		<TD colspan="3">
 			<select name="netadd[vlanid]" class="lms-ui-advanced-select">
-				<option value="">{trans("None")}</option>
+				<option value="">{trans("— none —")}</option>
 				{foreach $vlanlist as $v}
 				<option value="{$v.id}">(#{$v.vlanid}){if $v.description}, {$v.description|trunescape:45}{/if}{if $v.customerid}, {$v.customername|escape} (#{$v.customerid}){/if}</option>
 				{/foreach}
