--- a/templates/default/net/netadd.html
+++ b/templates/default/net/netadd.html
@@ -69,7 +69,7 @@
 			<select name="netadd[vlanid]" class="lms-ui-advanced-select">
 				<option value="">{trans("— none —")}</option>
 				{foreach $vlanlist as $v}
-				<option value="{$v.id}">(#{$v.vlanid}){if $v.description}, {$v.description|trunescape:45}{/if}{if $v.customerid}, {$v.customername|escape} (#{$v.customerid}){/if}</option>
+					<option value="{$v.id}">({$v.vlanid}){if $v.description}, {$v.description|trunescape:45}{/if}{if $v.customerid}, {$v.customername|escape} (#{$v.customerid}){/if}</option>
 				{/foreach}
 			</select>
 		</TD>
