improvement: more info about vlan assigned to network

--- a/templates/default/net/netinfo.html
+++ b/templates/default/net/netinfo.html
@@ -113,16 +113,18 @@
 				{/foreach}
 			</select>
 			{else}
-				({$network.vlanid})
-				{if $network.vlandescription}{strip}
-					,&nbsp;{$network.vlandescription|trunescape:45}
-				{/strip}{/if}
-				{if $network.vlancustomername}{strip}
-					,&nbsp;
-					<a href="?m=customerinfo&id={$network.vlancustomerid}">
-						{$network.vlancustomername|escape} (#{$network.vlancustomerid})
-					</a>
-				{/strip}{/if}
+				{strip}
+					({$network.vlanid})
+					{if $network.vlandescription}
+						,&nbsp;{$network.vlandescription|trunescape:45}
+					{/if}
+					{if $network.vlancustomername}{strip}
+						,&nbsp;
+						<a href="?m=customerinfo&id={$network.vlancustomerid}">
+							{$network.vlancustomername|escape} (#{$network.vlancustomerid})
+						</a>
+					{/if}
+				{/strip}
 			{/if}
 		</TD>
 	</TR>
