--- a/templates/default/voipaccount/voipaccounteditbox.html
+++ b/templates/default/voipaccount/voipaccounteditbox.html
@@ -121,7 +121,7 @@
                                                         <td>
                                                             <div>
                                                                 {$pool_number_select}
-                                                                <span class="ui-icon ui-icon-closethick remove-number{if count($voipaccountinfo.phones) < 2} lms-ui-visibility-hidden{/if}"></span>
+                                                                <span class="ui-icon ui-icon-closethick remove-number{if empty($voipaccountinfo.phones) || count($voipaccountinfo.phones) < 2} lms-ui-visibility-hidden{/if}"></span>
                                                             </div>
                                                         </td>
                                                     </tr>
