--- a/templates/default/netdev/netdevinfo.html
+++ b/templates/default/netdev/netdevinfo.html
@@ -44,7 +44,10 @@
 	{include file="netdev/radiosectors.html"}
 {/block}
 {block name=netdevtickets}
-        {include file="netdev/netdevtickets.html"}
+	{include file="netdev/netdevtickets.html"}
+{/block}
+{block name=netdevevents}
+	{include file='netdev/netdevevents.html'}
 {/block}
 </div>
 <script type="text/javascript">
