--- a/templates/default/netnode/netnodeinfo.html
+++ b/templates/default/netnode/netnodeinfo.html
@@ -15,6 +15,9 @@
 {block name=netnodetickets}
 	{include file="netnode/netnodetickets.html"}
 {/block}
+{block name=netnodeevents}
+	{include file='netnode/netnodeevents.html'}
+{/block}
 </div>
 <script>
 	restoreSortable('netnodeinfo-sortable', '{$netnodeinfo_sortable_order}');
