--- a/templates/default/event/eventprint.html
+++ b/templates/default/event/eventprint.html
@@ -74,9 +74,9 @@
 			{/foreach}
 		</TD>
 		<TD class="valign-top text-center nobr">
-		{if $event.netnode_id}
-			{trans("Network node:")}<br>
-			{$event.netnode_name}<br>{$event.netnode_location}
+		{if $event.netnodeid}
+			{icon name='netnode' label=$event.netnode_name}
+			{icon name='location' label=$event.netnode_location}
 		{else}
 			{$event.customername|truncate:"40":"&hellip;":true}{if !empty($event.customerid)} ({$event.customerid}){/if}<BR>
 			{if !empty($event.address_id)}
@@ -87,6 +87,9 @@
 				{$event.customerlocation}
 			{/if}
 			<br>{$event.customerphone}
+		{/if}
+		{if $event.netdevid}
+			{icon name='netdevice' label=$event.netdev_name}
 		{/if}
 		</TD>
 	</TR>
