--- a/templates/default/netnode/netnodetickets.html
+++ b/templates/default/netnode/netnodetickets.html
@@ -3,11 +3,12 @@
     <THEAD>
 	<TR class="hand lmsbox-titlebar" data-lmsbox-content="netnodeticketpanel">
 		<TD class="bold">
-			{icon name="helpdesk" class="lms-ui-sortable-handle"}
-			{trans("Assigned tickets:")} ({if !empty($queue)}{count($queue)}{else}0{/if})
+			{icon name="helpdesk" class="lms-ui-sortable-handle" label='Tickets'}
+			({$queue|size})
 		</TD>
 		<TD class="text-right nobr">
-			<A href="?m=rtticketadd&netnodeid={$nodeinfo.id}"><IMG src="img/save.gif" alt="{trans("Add new")}"> {trans("Add new")}</A>
+			{button type='link' href="?m=rtticketadd&netnodeid={$nodeinfo.id}"
+				icon='add' tip='Add new' label='Add'}
 		</TD>
 	</TR>
     </THEAD>
