change of smarty function name

--- a/templates/default/rt/rtnetdevs.html
+++ b/templates/default/rt/rtnetdevs.html
@@ -1,7 +1,4 @@
 {$elemname="$form[netdevid]"}
 {$elemid=$form|cat:'netdevid'}
 
-{networkDeviceSelection
-    elemname=$elemname
-    id=$elemid
-}
+{network_device_selection elemname=$elemname id=$elemid}
