--- a/templates/default/netnode/netnodeevents.html
+++ b/templates/default/netnode/netnodeevents.html
@@ -1,5 +1,5 @@
 <!--// $Id$ //-->
-<table class="lmsbox lms-ui-sortable lms-ui-tab-container" id="netnodeevents">
+<table class="lmsbox lms-ui-sortable lms-ui-tab-container" id="netnodeevents" data-label="netnodeeventspanel">
     <thead>
 	<tr class="hand lmsbox-titlebar" data-lmsbox-content="netnodeeventspanel">
 		<td class="bold">
@@ -29,11 +29,3 @@
 	</tr>
     </tbody>
 </table>
-
-<script>
-
-    if (getCookie('netnodeeventspanel') == '1') {
-        $('#netnodeeventspanel').show();
-    }
-
-</script>
