--- a/templates/default/netnode/netnodedevices.html
+++ b/templates/default/netnode/netnodedevices.html
@@ -21,7 +21,7 @@
 				{t a=$count}Assigned network devices ($a){/t}
 			</td>
 			<td class="text-right nobr">
-				{button type='link' icon='add' href="#" id='new-net-dev' label='Add'
+				{button type='link' icon='add' id='new-net-dev' label='Add'
 					onclick="javascript:netDevForNetNodeChooseWin('{$objectid}')"}
 			</td>
 		</TR>
