the same syntax as bellow

--- a/templates/default/rt/rtnetdevs.html
+++ b/templates/default/rt/rtnetdevs.html
@@ -1,4 +1,4 @@
-{$elemname="$form[netdevid]"}
+{$elemname=$form|cat:'[netdevid]'}
 {$elemid=$form|cat:'netdevid'}
 
 {network_device_selection elemname=$elemname id=$elemid}
